# kingsmen

./: .gitignore  CMakeLists.txt  README.md
src/: AlphaBeta.cpp  AlphaBeta.h  Board.cpp  Client.py  Controller.cpp  Evaluate.cpp  Evaluate.h  MTDF.cpp  MTDF.h  Node.cpp  PVS.cpp  PVS.h  Search.cpp  Search.h  Server.py  board.txt  config.txt  d5rtfyuhi.cpp  enumss.hpp  main.cpp  main.py  main_bak.cpp  main_search.cpp  xx
